# GreenWing

./: .env.development  .env.local  .env.production  .eslintrc.json  .firebaserc  .gitignore  README.md  env.development  index.js  jest.config.js  next.config.js  package-lock.json  package.json  server.js  service.js  tailwind.config.js
.firebase/: hosting.cHVibGlj.cache
.github/workflows/: firebase-hosting-merge.yml  (+3 more)
__tests__/: index.test.ts  index.test.tsx
config/: deployment.env  near.js
constants/: analytics-events.ts  endpoints.ts  webapp-urls.ts
contexts/: WalletSelectorContext.tsx
contract/: Cargo.toml  README.md  compile.js
contracts/: Cargo.toml
contracts/events/: Cargo.toml  README.md  TESTS.md  compile.js  deploy.js  init.js
contracts/events/src/: constants.rs  lib.rs  nft.rs  views.rs
contracts/events/tests/: start_events.js  test.js  utils.js
contracts/near-contract-standards/: Cargo.toml
contracts/near-contract-standards/src/non_fungible_token/: macros.rs
contracts/near-contract-standards/src/non_fungible_token/core/: core_impl.rs  mod.rs
contracts/tests/sim/: main.rs  tests.rs  utils.rs
hooks/: index.ts  useProfileState.ts
mockData/: mockBlogPost.ts  mockCheckIns.ts  mockEventActions.ts  mockEvents.ts  mockNewEvent.ts  mockUserAccount.ts
models/: AppState.ts  Contract.ts  Event.ts  NewEvent.ts  UserAccount.ts
pages/: 404.tsx  _app.tsx  _document.tsx  index.tsx
scripts/: deploy.js  init.js  patch-config.js
store/: index.ts
styles/: globals.css
utils/: contract-methods.ts  contract.ts  firebase.ts  index.ts  near.ts
(+133 files in other folders)
