[package]
name = "events"
version = "1.0.0"
authors = ["vSelf team <ie@vself.app>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#near-sdk = "4.1.0-pre.1"
near-sdk = "4.0.0"
#near-contract-standards = "4.0.0"
near-contract-standards = { path = "../near-contract-standards" }
hex = "0.4.3"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
